# asciii

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Jenkinsfile  Makefile.deb  README.md  SERVER.md  asciii.wasm  build.rs  check_feature_combinations.sh  config.json  default.yml.erb  index.html  manual.md  run_wasi.js  run_wasm.sh  rustfmt.toml  search-index.js  xmrig
aho_corasick/: struct.AcAutomaton.html  struct.Dense.html  struct.FullAcAutomaton.html  struct.Match.html  struct.Matches.html  struct.MatchesOverlapping.html  struct.Sparse.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html  trait.Transitions.html  type.StateIdx.html
asciii/: BillType.t.html  DOCUMENTATION_URL.v.html  enum.BillType.html  fn.setup_app.html  fn.version.html  index.html  sidebar-items.js  static.DOCUMENTATION_URL.html  struct.CONFIG.html
atty/: fn.is.html  fn.isnt.html  index.html
backtrace/: struct.BacktraceFrame.html
benches/: lib.rs
bill/: Amount.t.html  Bill.t.html  BillProduct.t.html  sidebar-items.js  type.Money.html
bitflags/: index.html  macro.bitflags!.html
book/: book.toml
chrono/: enum.Weekday.html  index.html  struct.Duration.html  trait.Datelike.html  trait.Timelike.html
ci/: Dockerfile  before_deploy.ps1  before_deploy.sh  build.Dockerfile  ci_env.sh  environment  install.sh  most_recent_commit.sh  release  run-docker.sh  run.sh  script.sh
clap/: enum.AppSettings.html  enum.ErrorKind.html  enum.Format.html  index.html  macro._clap_count_exprs!.html  macro.arg_enum!.html  macro.crate_version!.html  macro.crate_version.html  macro.load_yaml!.html  macro.value_t!.html  macro.value_t_or_exit!.html  macro.value_t_or_exit.html  macro.values_t!.html  macro.values_t.html  macro.values_t_or_exit!.html  macro.values_t_or_exit.html  sidebar-items.js  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Error.html  struct.OsValues.html  struct.SubCommand.html  struct.YamlLoader.html  type.Result.html
claude/: sidebar-items.js  struct.Currency.html
currency/: index.html  struct.Currency.html  struct.ParseCurrencyError.html
custom_derive/: index.html
doc/: aliases.js  index.html  search-index.js  source-files.js
encode_unicode/: struct.Utf8Char.html  trait.CharExt.html  trait.U8UtfExt.html
enum_derive/: EnumInnerAsTrait.m.html  IterVariants.m.html  NextVariant.m.html  PrevVariant.m.html  index.html  macro.EnumDisplay!.html  macro.EnumFromStr!.html  macro.EnumInnerAsTrait.html  macro.IterVariantNames!.html  macro.IterVariantNames.html  macro.IterVariants!.html  macro.NextVariant!.html  macro.NextVariant.html  macro.PrevVariant!.html  sidebar-items.js  struct.ParseEnumError.html
env_logger/: struct.LogBuilder.html
examples/: SERVER.md  asciiic.rs  calendar.rs  currency.rs  current.yml  date_arithmatic.rs  export.rs  git_describe.rs  git_info.rs  home_path.rs  import.rs  list_projects.rs  locale.rs  old.yml  open.rs  parse.rs  server.rs  spawn_vim.rs  spec.rs  storage_json.rs  terminal_print.rs  test.yml  today.rs  write_back.rs
git2/: constant.ADD_CHECK_PATHSPEC.html  constant.ADD_DEFAULT.html  constant.ADD_DISABLE_PATHSPEC_MATCH.html  constant.ADD_FORCE.html  constant.CHECKOUT_NOTIFICATION_IGNORED.html  constant.DEFAULT.html  constant.DEFAULT_COMMENT_CHAR.html  constant.DIFF_STATS_FULL.html  constant.DIFF_STATS_INCLUDE_SUMMARY.html  constant.DIFF_STATS_NONE.html  constant.DIFF_STATS_NUMBER.html  constant.DIFF_STATS_SHORT.html  constant.IDXENTRY_ADDED.html  constant.IDXENTRY_CONFLICTED.html  constant.IDXENTRY_EXTENDED.html  constant.IDXENTRY_HASHED.html  constant.IDXENTRY_INTENT_TO_ADD.html  constant.IDXENTRY_UNHASHED.html  constant.IDXENTRY_WT_REMOVE.html  constant.PATHSPEC_DEFAULT.html  constant.PATHSPEC_FAILURES_ONLY.html  constant.PATHSPEC_FIND_FAILURES.html  constant.PATHSPEC_IGNORE_CASE.html  constant.PATHSPEC_NO_GLOB.html  constant.PATHSPEC_NO_MATCH_ERROR.html  constant.PATHSPEC_USE_CASE.html  constant.REPOSITORY_INIT_SHARED_ALL.html  constant.REPOSITORY_INIT_SHARED_GROUP.html  constant.REPOSITORY_INIT_SHARED_UMASK.html  constant.REPOSITORY_OPEN_BARE.html  constant.REPOSITORY_OPEN_CROSS_FS.html  constant.REPOSITORY_OPEN_NO_SEARCH.html  constant.REVPARSE_MERGE_BASE.html  constant.REVPARSE_RANGE.html  constant.REVPARSE_SINGLE.html  constant.SORT_NONE.html  constant.SORT_REVERSE.html  constant.SORT_TIME.html  constant.SORT_TOPOLOGICAL.html  constant.SSH_CUSTOM.html  (+143 more)
handlebars/: enum.TemplateFileError.html  fn.no_escape.html  index.html  struct.Context.html  struct.ContextJson.html  struct.Handlebars.html  struct.Helper.html  struct.Template.html
idna/: fn.domain_to_ascii.html  fn.domain_to_unicode.html
lang/: de.po  de.po~  default.pot
libgit2_sys/: constant.GITERR_CALLBACK.html  constant.GITERR_CHECKOUT.html  constant.GITERR_CHERRYPICK.html  constant.GITERR_CONFIG.html  constant.GITERR_DESCRIBE.html  constant.GITERR_FETCHHEAD.html  constant.GITERR_FILESYSTEM.html  constant.GITERR_FILTER.html  constant.GITERR_INDEX.html  constant.GITERR_INDEXER.html  constant.GITERR_INVALID.html  constant.GITERR_MERGE.html  constant.GITERR_NET.html  constant.GITERR_NOMEMORY.html  constant.GITERR_NONE.html  constant.GITERR_OBJECT.html  constant.GITERR_ODB.html  constant.GITERR_OS.html  constant.GITERR_REBASE.html  constant.GITERR_REFERENCE.html  constant.GITERR_REGEX.html  constant.GITERR_REPOSITORY.html  constant.GITERR_REVERT.html  constant.GITERR_SSH.html  constant.GITERR_SSL.html  constant.GITERR_STASH.html  constant.GITERR_SUBMODULE.html  constant.GITERR_TAG.html  constant.GITERR_THREAD.html  constant.GITERR_TREE.html  constant.GITERR_ZLIB.html  constant.GIT_BLAME_FIRST_PARENT.html  constant.GIT_BLAME_NORMAL.html  constant.GIT_BLAME_OPTIONS_VERSION.html  constant.GIT_BLAME_TRACK_COPIES_ANY_COMMIT_COPIES.html  constant.GIT_BLAME_TRACK_COPIES_SAME_COMMIT_COPIES.html  constant.GIT_BLAME_TRACK_COPIES_SAME_COMMIT_MOVES.html  constant.GIT_BLAME_TRACK_COPIES_SAME_FILE.html  constant.GIT_BRANCH_ALL.html  constant.GIT_BRANCH_LOCAL.html  (+922 more)
libssh2_sys/: constant.LIBSSH2_CHANNEL_PACKET_DEFAULT.html  (+225 more)
(+6608 files in other folders)
